styles/Home.module.css
.container {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.main {
  padding: 5rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.footer {
  width: 100%;
  height: 100px;
  border-top: 1px solid #eaeaea;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer img {
  margin-left: 0.5rem;
}

.footer a {
  display: flex;
  justify-content: center;
  align-items: center;
}

.title a {
  color: #0070f3;
  text-decoration: none;
}

.title a:hover,
.title a:focus,
.title a:active {
  text-decoration: underline;
}

.title {
  margin: 0;
  line-height: 1.15;
  font-size: 4rem;
}

.title,
.description {
  text-align: center;
}

.description {
  line-height: 1.5;
  font-size: 1.5rem;
}

.code {
  background: #fafafa;
  border-radius: 5px;
  padding: 0.75rem;
  font-size: 1.1rem;
  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
    Bitstream Vera Sans Mono, Courier New, monospace;
}

.grid {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-wrap: wrap;
  max-width: 800px;
  margin-top: 3rem;
}

.card {
  margin: 1rem;
  flex-basis: 45%;
  padding: 1.5rem;
  text-align: left;
  color: inherit;
  text-decoration: none;
  border: 1px solid #eaeaea;
  border-radius: 10px;
  transition: color 0.15s ease, border-color 0.15s ease;
}

.card:hover,
.card:focus,
.card:active {
  color: #0070f3;
  border-color: #0070f3;
}

.card h3 {
  margin: 0 0 1rem 0;
  font-size: 1.5rem;
}

.card p {
  margin: 0;
  font-size: 1.25rem;
  line-height: 1.5;
}

.logo {
  height: 1em;
}

.ctext{
  color: #7b6b5b;
}

.imgpadding{
  padding-top: 40px;
}

.illustrationbutton {
  margin: auto;
  display: block;
  width: 25%;
  background-color: #7b6b5b;
  border: none;
  margin-top: 50px;
  padding:10px;
}
.illustrationpadding{
  padding-left:65px;  
}

.illustrationbutton:hover {
  background-color: #7b6b5b;
}
.product{
background-color: #faf6f2;
width: 250px;
}

.myl {
 padding-left:10px;
 padding-right:5px;
 font-size: 14px;
 margin-right: 20px;
 margin-left: 0px;
}

.myl2 col{
  display:flex;
  flex-direction: row;
  padding-left:0px;
  padding-right:0px;  
 }
 .mylnopadding{
  padding:0px;
 }

.iservices{
  font-size: 13px;
  color: #7b6b5b;
}
.iservices ol{
  padding-left: 3mm;
}
.iservices .servicesspan {
  font-size: 13px; 
  font-weight:normal; 

}
.iservices .servicesparag {
  font-size: 20px;
  font-weight:600; 
  line-height:80%;
}
.iservices .servicestitle {
  font-size: 50px;  
  line-height:80%;
}
.iservicesp {  
  font-size: 20px;
}

.iservices .servicestitlespan {
  font-size: 40px;  
}
.iservices .serviceslinkcol { 
 padding-top:70px;
font-size: 16px;
padding-left: 20px;
 }
.iservices .serviceslink a {
 cursor: pointer;  
text-decoration: none;
color: #7b6b5b;
}
.iservices .serviceslink a:hover {
 color: rgb(53, 47, 40);
 }

.iservices .imgpadding {
  padding-left: 120px;
  padding-top:10px;

}
.iservices .imgpadding img {   
  width: 350px;
}
.iservices .servicesbg {
 background:linear-gradient(to bottom, #7b6b5b 100%,white 100%) ;
 padding:20px;
 width: 100%;
 height: auto;
}

.sendButton {
  width: 150px;
  height: 45px;
  font-size: 18px;
  text-align: center;
  background: #7b6b5b;
  border-color: #e7d2bc;
  color: #ffffff;
}

.sendButton:hover {
  width: 150px;
  height: 45px;
  font-size: 18px;
  text-align: center;
  background: #927f6b;
  border-color: #e7d2bc;
  color: #ffffff;
}

.bannerCenter{
  margin-top: 0px !important;
  text-align: center;
}

.getStartedButton {
  background-color: #7b6b5b;
  border-color: #7b6b5b;
  margin: auto;
  width: 330px;
  height: 80px;
  font-size: 30px;
  margin-top: 20px;
}

.getStartedButton:hover {
  background-color: #7b6b5b;
  border-color: #7b6b5b;
}



.heading {
  display: block;
  text-align: center;
  width: 100%;
  margin-bottom: 30px;
  color: #7b6b5b;
}

.heading h1 {
  font-size: 50px;
}

.orderedlist li{
  font-size: 15px;
  padding-bottom: 15px;
}

.privacy p {
  font-size: 15px;
}

.privacy ol li {
  font-size: 15px;
}

.privacy ul li {
  font-size: 15px;
}

.getStartedButton {
  background-color: #7b6b5b;
  border-color: #7b6b5b;
  margin: auto;
  width: 30%;  
  font-size: 35px;
  margin-top: 20px;
}

.getStartedButton:hover {
  background-color: #7b6b5b;
  border-color: #7b6b5b;
}

.brown {
  color: #7b6b5b;
}

.descriptionHeading {
  font-weight: bold;
}

.itemImage {
  width: 34%;
}

.home {
  border-bottom: 0px #7b6b5b solid;
}

@media screen and (max-width: 1030px){
  .grid {
    width: 100%;
    flex-direction: column;
  }

  .getStartedButton {
    background-color: #7b6b5b;
    border-color: #7b6b5b;
    margin: auto;
    width: 230px;
    height: 60px;
    font-size: 30px;
    margin-top: 20px;
  }
  
  .getStartedButton:hover {
    background-color: #7b6b5b;
    border-color: #7b6b5b;
  }

  
   
   .iservices{
     font-size: 13px;
     color: #7b6b5b;
   }
   .iservices ol{
     padding-left: 3mm;
   }
   .iservices .servicesspan {
     font-size: 13px; 
     font-weight:normal; 
   
   }
   .iservices .servicesparag {
     font-size: 15px;
     font-weight:600; 
     line-height:80%;
   }
   .iservices .servicestitle {
     font-size: 40px;  
     line-height:80%;
   }
   .iservices .servicestitlespan {
    font-size: 30px;  
  }
   .iservicesp {  
     font-size: 20px;
   }
   
  
   .iservices .serviceslinkcol { 
  padding-top:25px;
   font-size: 20px;
   padding-left: 20px;
    }
   .iservices .serviceslink a {
   cursor: pointer;  
   text-decoration: none;
   color: #7b6b5b;
   }
   .iservices .serviceslink a:hover {
    color: rgb(53, 47, 40);
    }
   
   .iservices .imgpadding {
     padding-left: 0px;
     padding-top:10px;
     width: 200px;   
   }
   .iservices .imgpadding img {   
    width: 250px;
  
  }
  .iservices img {   
    padding:10px;
  
  }
   .iservices .servicesbg {
    background:linear-gradient(to bottom, #7b6b5b 100%,white 100%) ;
    padding:20px;
    width: 100%;
    height: auto;
   }

   .imgpadding{
    padding-top: 40px;
    padding-left:45px ;
  }
  
  .illustrationbutton {
    margin: auto;
    display: block;
    width: 200px;
    background-color: #7b6b5b;
    border: none;
    margin-top: 50px;
    padding:10px;
  }
  .illustrationpadding{
    padding-left:65px;  
  }
  
  .illustrationbutton:hover {
    background-color: #7b6b5b;
  }
  .myl h3{
    font-size:22px ;
  }
  .myl {
    padding-left:0px;
    padding-right:0px;  
    display:flex;
    flex-direction: column;
    width: 220px; 
    margin-left: 0px;  
    margin-right: 10px; 
   }
  .myl2{
  display:flex;
    flex-wrap: nowrap;
    padding-left:0px;
    padding-right:0px;
    flex-wrap: nowrap;
    margin-left: 0px;  
    margin-right: 0px; 
    font-size: 12px;
   }
   .mylpsize{
    font-size: 12px;
   }
  
   .product{
    background-color: #faf6f2;
    width: 290px;
    padding-left: 35px;
    }
}

